# File and Version Information:
#  $Id: ChangeLog 8463 2014-06-24 01:53:04Z cpo@SLAC.STANFORD.EDU $
#
# Description:
#  ChangeLog file for package xtcav
#------------------------------------------------------------------------

Package author: Alvaro Sanchez-Gonzalez

Please describe any modifications that you made to the package in the
reverse time order.

-Added method GetPhysicalUnitsResults, to obtain the physical axis of the cropped xtcav image
-Removed some "xtcav." when loading modules from modules which also belong to xtcav.
-Refactoring the Utils.py into Utils.py and UtilsPsana.py, to separate purely algorithmic functions, from functions which fetch data from psana.
-Modified DenoiseFilter to be less sensitive to noise, and locate empty images easier.
-Added an ipython notebook with further examples.
-Modified progress messages when generating the references to overwrite the previous message.
-Ready for tagging.

Tag: V00-00-18
2016-03-17 Christopher O'Grady
It appears the bug fix in V00-00-16 was only put in
GenerateLasingOffReference.py.  I have also propagated
it to GenerateDarkBackground.py

Tag: V00-00-17
2016-02-19 Christopher O'Grady
Suppress divide-by-zero warnings in Utils.py.
Also this comment from Alvaro:
-Small typo in comment, and small error in the autothreshold algorithm, which probably did not have any consequences, except for making it a bit slower, but that could have them in certain scenarios.

Tag: V00-00-16
2016-02-19 Christopher O'Grady
Add workaround for problem that returned incorrect epics information
on shots where XTCAV was not recorded.  This happened because we
are using indexing-mode, and xtcav is not recording epics data on
shots where the camera is not recorded, coupled with the incorrect
idea of a global "Env" where epics information is stored (vs.
stored "per-shot").  The workaround is to check for an xtcav image
before trying to access the epics variables when analyzing lasing-off.

Tag: V00-00-15